# appointmentbackend

./: .env.example  .gitignore  Dockerfile  PAGINATION_FIX_SUMMARY.md  QUERY_OPTIMIZATION_SUMMARY.md  README.md  TESTING_CHECKLIST.md  WARP.md  alembic.ini  appointmentbackend  commands.txt  contacts.pem  docker-compose.yml  files_needing_loggers.txt  gunicorn_app.service  gunicorn_conf.py  logger_analysis.json  logger_analysis_new.json  promsts.txt  pyproject.toml  requirements.txt  test.txt  test_results.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20241109_000001_initial.py  879104bebc48_add_metadata_indexes.py  add_users_and_profiles_tables.py  c64a70a64aab_add_users_and_profiles_tables.py  create_ai_chats_table.py
app/: main.py
app/api/: deps.py
app/clients/: connectra_client.py  mongodb.py
app/core/: __init__.py  ai_config.py  config.py  constants.py  exceptions.py  logging.py  logging_config.py  middleware.py  security.py
app/data/: Continent_Country.json  insdustryids.csv
app/db/: __init__.py  base.py  session.py  types.py
app/middleware/: performance_monitor.py  rate_limit.py  vql_monitoring.py
app/models/: __init__.py  ai_chat.py  billing.py  companies.py  contacts.py  departments.py  email_patterns.py  user.py  (+4 more)
deploy/: appointmentbackend  appointmentbackend.service  deploy-to-ec2.sh  env.example  nginx-appointment360.conf
docs/: BIG_DATA_OPTIMIZATIONS.md  COMPLETE_API_DOCUMENTATION.md  CONTACTS_REPO_REFACTORING_PLAN.md  Complete FastAPI Project Structure for Production-.md  Complete Guide to Deploy FastAPI with Gunicorn and.md  FINAL_TEST_RESULTS.md  FIX_SUMMARY.md  FastAPI + Uvicorn Deployment on Ubuntu with Nginx.md  FastAPI with Uvicorn and Nginx on Ubuntu - Complet.md  INDEX_VERIFICATION_SUMMARY.md  LOG_ANALYSIS_AND_FIX.md  OPTIMIZATION_GUIDE.md  Prerequisites.md  UNUSED_FILES_ANALYSIS.md  Why FastAPI is the Best Choice for Python Server D.md  apis.md  contacts-endpoints-query-building-analysis.md  contacts-query-building-process.md  contacts.md  log_analysis_company_address_pagination.md  log_analysis_summary.md  logging_conventions.md  migrations_metadata_indexes.md  so in fastapi framework , give me files structure.md  ubuntu-production-deployment.md
postman/: Appointment360 API.postman_collection.json  Bulk Email Verifier Api Documentation.postman_collection.json  update_postman_linkedin.py  update_postman_linkedin_get.py
scripts/: COMPLETE_DATA_INVENTORY.md  ENHANCED_EXTRACTION_TASKS.md  SALES_NAVIGATOR_DATA_ANALYSIS.md  analyze_imports_comprehensive.py  analyze_logger_coverage.py  import_analysis.json  import_analysis.txt  import_analysis_report.json  run_gunicorn.sh  sales_navigator_profiles.json  scrape_sales_navigator.py  seed_dashboard_pages.py  seed_marketing_data.py  test_all_apis.py  test_apollo_apis.py  test_contact_attributes.py  tmp_profile_sql.py
sql/: sql_runner.py  sqlline.sql  verify_user_indexes.sql
tables/: contacts.sql  contacts_metadata.sql
(+506 files in other folders)
