[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment360-backend"
version = "0.1.0"
description = "Async FastAPI backend for Appointment360 data APIs and imports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Appointment360 Team", email = "engineering@example.com" }
]
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "alembic==1.13.3",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.9",
  "celery==5.4.0",
  "redis==5.1.1",
  "flower==2.0.1",
  "aiofiles==23.2.1",
  "python-dotenv==1.0.1",
  "tenacity==9.0.0",
  "httpx==0.27.2",
  "orjson==3.10.7"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.12.0",
  "types-redis==4.5.3.10"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "app/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true

