[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contact360-backend"
version = "0.1.0"
description = "Async FastAPI backend for Contact360 - Contact Management System"
readme = "README.md"
requires-python = ">=3"
license = { text = "MIT" }
authors = [
  { name = "Contact360 Team", email = "engineering@example.com" }
]
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy[asyncio]==2.0.35",
  "asyncpg==0.29.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "bcrypt==4.1.2",
  "python-multipart==0.0.9",
  "aiofiles==23.2.1",
  "python-dotenv==1.0.1",
  "tenacity==9.0.0",
  "httpx==0.27.2",
  "orjson==3.10.7",
  "email-validator==2.2.0",
  "cachetools>=5.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "mypy==1.12.0",
  "black==24.8.0",
  "ipython==8.25.0"
]
redis = [
  "redis>=5.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
  "app/tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC"]

[tool.mypy]
python_version = "3"
plugins = ["pydantic.mypy"]
strict = false
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true

